layout issues worked out. Tablet and desktop media queries added

--- a/src/scss/modules/portfolio-cards.scss
+++ b/src/scss/modules/portfolio-cards.scss
@@ -1,5 +1,3 @@
-
-
 .portfolio-card__container {
   display: flex;
   width: 100%;
@@ -15,33 +13,33 @@
 
 }
 
+.card {
+  border: none;
+}
+
 .wrapper--alignleft {
 display: flex;
 flex: 1;
 width: 80%;
+height: 100%;
 align-content: center;
 flex-wrap: wrap;
-height: 100%;
+
 
 }
 .wrapper--alignright {
 display: flex;
 flex: 1;
 width: 80%;
+height: 100%;
 justify-content: flex-end;
 align-content: center;
 flex-wrap: wrap-reverse;
-height: 100%;
+
 
 
 }
 
-.social-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 300px;
-}
 
 .social-wrapper span {
   margin-right: 5px;
@@ -56,15 +54,21 @@ height: 100%;
   flex-direction: column;
   flex-wrap: wrap;
   align-content: center;
-  max-width: 700px;
-  border: pink solid 3px;
+  justify-content: center;
+  max-width: 600px;
+  // border: pink solid 3px;
+  margin-top: 10px;
+  margin-bottom: 100px;
 
 }
 
-.portfolio-content {
+ul.portfolio-content {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
+  margin: 0;
+  margin-bottom: 10px;
+  margin-top: 20px;
   align-content: space-around;
 
 }
@@ -72,7 +76,63 @@ height: 100%;
 .portfolio-content li {
   display: flex;
   max-width: 200px;
-  max-height: 200px;
+  max-height: 300px;
   object-fit: cover;
-  align-content: space-around;
+  justify-content:space-around;
+}
+
+
+.portfolio-content img {
+  max-height: 100px;
+  max-width: 100px;
+}
+
+
+// MEDIA QUERY FOR TABLET SIZE
+@media only screen and (min-width: 500px) {
+    .social-wrapper {
+      display: flex;
+      align-items: center;
+      width: 300px;
+    }
+
+
+  .wrapper--alignleft {
+  align-content: center;
+  justify-content: center;
+
+
+  }
+  .wrapper--alignright {
+  justify-content: center;
+  align-content: center;
+
+  }
+
+
+}
+
+// MEDIA QUERY FOR DESKTOP
+@media only screen and (min-width: 1265px) {
+
+  .portfolio-content__wrapper {
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .wrapper--alignleft {
+  width: 90%;
+  height: 700px;
+
+  }
+  .wrapper--alignright {
+  height: 700px;
+  }
+
+  .portfolio-content img {
+    max-height: 200px;
+    max-width: 200px;
+  }
 }
